fixed left-aligned footer

--- a/_sass/base/_global.scss
+++ b/_sass/base/_global.scss
@@ -53,6 +53,7 @@ blockquote {
 }
 blockquote p:last-child,
 footer p:last-child {
+  text-align:center;
   margin-bottom: 0;
 }
 table {
